# peakdet

./: .all-contributorsrc  .autorc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_BUGS.md  ISSUE_TEMPLATE_DISCUSSION.md  ISSUE_TEMPLATE_MEETING.md  config.yml
.github/workflows/: auto-author-assign.yml  auto-label.yml  auto-release.yml  bot.yaml  python-publish.yml
docs/: Makefile  api.rst  conf.py  installation.rst  requirements.txt  usage.rst
docs/guide/: loading.rst  physio.rst  processing.rst
docs/user_guide/: editing.rst  loading.rst  metrics.rst  physio.rst  processing.rst  saving.rst
peakdet/: __init__.py  _version.py  analytics.py  blocks.py  editor.py  external.py  extrema.py  gui.py  info.py  io.py  modalities.py  operations.py  peakfinder.py  peaks.py  physio.py  utils.py  workflow.py
peakdet/cli/: run.py
peakdet/configs/: config_ppg_example.json
peakdet/tests/: __init__.py  conftest.py  test_analytics.py  test_editor.py  test_external.py  test_io.py  test_modalities.py  test_operations.py  test_peakfinder.py  test_physio.py  test_utils.py  utils.py
peakdet/tests/data/: ECG.csv  ECG.phys  ECG1.1D  ECG2.1D  PPG.csv  RESP.csv  Resp2.1D  ecg.phys  header.csv  history.json  rtpeaks.csv
scripts/: environment.yml  hrv_pipeline
