[metadata]
description-file = README.rst
url = https://github.com/physiopy/peakdet
download_url = https://github.com/physiopy/peakdet
author = peakdet developers
maintainer = Ross Markello, Stefano Moia
maintainer_email = rossmarkello@gmail.com, s.moia@bcbl.eu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache-2.0
description = A Python toolbox for the identification and processing of peaks and troughs in physiological data
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    peakdet

[options]
python_requires = >=3.6.1
install_requires =
    Gooey
    matplotlib >=3.1.1, !=3.3.0rc1
    numpy >=1.9.3, !=*rc*
    pillow
    psutil
    PyYAML >=5.1, !=*rc*
    scipy
    wxpython
tests_require =
    pytest >=5.3
    pytest-cov
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
duecredit =
    duecredit
doc =
    pandas
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
test =
    pytest >=5.3
    pytest-cov
    %(style)s
all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(test)s

[options.package_data]
* = 
    peakdet/tests/data/*

[flake8]
exclude=
    *build/
    heuristics
    tests
ignore = E126, E203, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[coverage:run]
omit = peakdet/cli/*

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
norecursedirs = peakdet/cli

[versioneer]
VCS = git
style = pep440
versionfile_source = peakdet/_version.py
versionfile_build = peakdet/_version.py
tag_prefix =
parentdir_prefix =
