[metadata]
description-file = README.rst
url = https://github.com/physiopy/peakdet
download_url = https://github.com/physiopy/peakdet
author = peakdet developers
maintainer = Ross Markello, Stefano Moia
maintainer_email = rossmarkello@gmail.com, physiopy.community@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache-2.0
description = A Python toolbox for the identification and processing of peaks and troughs in physiological data
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    peakdet

[options]
python_requires = >=3.6.1
install_requires =
    matplotlib >=3.1.1, <=3.6.3, !=3.3.0rc1
    numpy >=1.9.3
    scipy
    loguru
tests_require =
    pytest >=5.3
    pytest-cov
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
duecredit =
    duecredit
nk =
    pandas
doc =
    %(nk)s
    pandas
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
    black
    isort <6.0.0
    pydocstyle
    codespell
enhgui =
    Gooey
    wxpython
test =
    pytest >=5.3
    pytest-cov
    %(style)s
    %(nk)s
all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(test)s


[options.package_data]
* =
    peakdet/tests/data/*

[flake8]
exclude=
    *build/
    tests
    versioneer.py
ignore = E126, E402, W503, W401, W811
extend-ignore = E203, E501
extend-select = B950
max-line-length = 88
per-file-ignores =
    */__init__.py:F401

[isort]
profile = black
skip_gitignore = true
extend_skip =
    setup.py
    versioneer.py
    peakdet/_version.py
skip_glob =
    docs/*

[pydocstyle]
convention = numpy
match =
    peakdet/*.py
match_dir = peakdet/[^tests]*

[codespell]
skip = venvs,.venv,versioneer.py,.git,build,./docs/_build
write-changes =
count =
quiet-level = 3

[coverage:run]
omit = peakdet/cli/*

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
norecursedirs = peakdet/cli

[versioneer]
VCS = git
style = pep440
versionfile_source = peakdet/_version.py
versionfile_build = peakdet/_version.py
tag_prefix =
parentdir_prefix =
