[metadata]
name = peakdet
url = https://github.com/physiopy/peakdet
download_url = https://github.com/physiopy/peakdet
author = Ross Markello, The Physiopy Community
maintainer = The Physiopy Community
maintainer_email = rossmarkello@gmail.com, physiopy.community@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
license = Apache-2.0
description = A Python toolbox for the identification and processing of peaks and troughs in physiological data
description-file = README.rst
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    peakdet

[options]
python_requires = >=3.6.1
install_requires =
    matplotlib >=3.1.1
    numpy >=1.9.3
    scipy
    loguru
tests_require =
    pytest >=5.3
    pytest-cov
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
duecredit =
    duecredit
nk =
    pandas
doc =
    %(nk)s
    pandas
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    codespell>=2.2.4
    ruff>=0.14.2
enhgui =
    Gooey
    wxpython
test =
    pytest >=5.3
    pytest-cov
    %(style)s
    %(nk)s
all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(test)s
dev =
    %(all)s
    pre-commit

[codespell]
skip = venvs,.venv,versioneer.py,.git,build,./docs/_build
write-changes =
count =
quiet-level = 3

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
norecursedirs = peakdet/cli

[versioneer]
VCS = git
style = pep440
versionfile_source = peakdet/_version.py
versionfile_build = peakdet/_version.py
tag_prefix =
parentdir_prefix =
